@@ -17,14 +17,14 @@ have_libtool=false
 if libtoolize --version < /dev/null > /dev/null 2>&1 ; then
 	libtool_version=`libtoolize --version | sed 's/^[^0-9]*\([0-9.][0-9.]*\).*/\1/'`
 	case $libtool_version in
-	    1.4*)
+	    1.5*)
 		have_libtool=true
 		;;
 	esac
 fi
 if $have_libtool ; then : ; else
 	echo
-	echo "You must have libtool 1.4 installed to compile $PROJECT."
+	echo "You must have libtool 1.5 installed to compile $PROJECT."
 	echo "Install the appropriate package for your distribution,"
 	echo "or get the source tarball at http://ftp.gnu.org/gnu/libtool/"
 	DIE=1
@@ -38,12 +38,12 @@ fi
 	DIE=1
 }
 
-if automake-1.6 --version < /dev/null > /dev/null 2>&1 ; then
-    AUTOMAKE=automake-1.6
-    ACLOCAL=aclocal-1.6
+if automake-1.7 --version < /dev/null > /dev/null 2>&1 ; then
+    AUTOMAKE=automake-1.7
+    ACLOCAL=aclocal-1.7
 else
 	echo
-	echo "You must have automake 1.6.x installed to compile $PROJECT."
+	echo "You must have automake 1.7.x installed to compile $PROJECT."
 	echo "Install the appropriate package for your distribution,"
 	echo "or get the source tarball at http://ftp.gnu.org/gnu/automake/"
 	DIE=1
