@@ -30,7 +30,7 @@ API_VERSION = "%d.%d" % (API_MAJOR_VERSION,
 GTKGLEXT_PKG = 'gtkglext-1.0'
 GTKGLEXT_REQUIRED_VERSION = '0.7.0'
 
-PYGTK_REQUIRED_VERSION = '1.99.15'
+PYGTK_REQUIRED_VERSION = '1.99.16'
 
 PYGTK_SUFFIX = '2.0'
 PYGTK_SUFFIX_LONG = 'gtk-' + PYGTK_SUFFIX
