@@ -1,3 +1,15 @@
+2003-04-16  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	Now use new versions of GNU autotools.
+	
+	  - autoconf 2.54 or above
+	  - automake 1.7 or above
+	  - libtool 1.5 or above
+	
+	* autogen.sh: Use libtool-1.5 and automake-1.7.
+	* configure.in: Use autoconf 2.54 or above.
+	* Makefile.am: Use automake-1.7.
+
 2003-04-14  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
 	* README.win32: Added.
